
add_executable(globaloctree globaloctree.cpp test_main.cpp)
target_include_directories(globaloctree PRIVATE ../../include)
target_include_directories(globaloctree PRIVATE ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(globaloctree ${MPI_CXX_LIBRARIES} gtest_main)
add_test(NAME GlobalTreeTests COMMAND globaloctree)

add_executable(exchange_domain exchange_domain.cpp test_main.cpp)
target_include_directories(exchange_domain PRIVATE ../../include)
target_include_directories(exchange_domain PRIVATE ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(exchange_domain ${MPI_CXX_LIBRARIES} gtest_main)
add_test(NAME GlobalDomainExchange COMMAND exchange_domain)

add_executable(treedomain treedomain.cpp test_main.cpp)
target_include_directories(treedomain PRIVATE ../../include)
target_include_directories(treedomain PRIVATE ../)
target_include_directories(treedomain PRIVATE ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(treedomain ${MPI_CXX_LIBRARIES} gtest_main)
add_test(NAME GlobalDomainTreeIntegration COMMAND treedomain)

add_executable(focus_tree focus_tree.cpp test_main.cpp)
target_include_directories(focus_tree PRIVATE ../../include)
target_include_directories(focus_tree PRIVATE ../)
target_include_directories(focus_tree PRIVATE ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(focus_tree ${MPI_CXX_LIBRARIES} gtest_main)
add_test(NAME FocusTreeIntegration COMMAND focus_tree)

add_executable(exchange_halos exchange_halos.cpp test_main.cpp)
target_include_directories(exchange_halos PRIVATE ../../include)
target_include_directories(exchange_halos PRIVATE ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(exchange_halos ${MPI_CXX_LIBRARIES} gtest_main)
add_test(NAME GlobalHaloExchange COMMAND exchange_halos)

add_executable(domain_2ranks domain_2ranks.cpp test_main.cpp)
target_include_directories(domain_2ranks PRIVATE ../../include)
target_include_directories(domain_2ranks PRIVATE ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(domain_2ranks ${MPI_CXX_LIBRARIES} gtest_main)
add_test(NAME GlobalDomain2Ranks COMMAND domain_2ranks)

add_executable(domain_nranks domain_nranks.cpp test_main.cpp)
target_include_directories(domain_nranks PRIVATE ../../include)
target_include_directories(domain_nranks PRIVATE ../)
target_include_directories(domain_nranks PRIVATE ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(domain_nranks ${MPI_CXX_LIBRARIES} gtest_main)
add_test(NAME GlobalDomainNRanks COMMAND domain_nranks)

add_executable(box_mpi box_mpi.cpp test_main.cpp)
target_include_directories(box_mpi PRIVATE ../../include)
target_include_directories(box_mpi PRIVATE ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(box_mpi ${MPI_CXX_LIBRARIES} gtest_main)
add_test(NAME GlobalBox COMMAND box_mpi)

add_executable(exchange_focus exchange_focus.cpp test_main.cpp)
target_include_directories(exchange_focus PRIVATE ../../include)
target_include_directories(exchange_focus PRIVATE ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(exchange_focus ${MPI_CXX_LIBRARIES} gtest_main)
add_test(NAME GlobalFocusExchange COMMAND exchange_focus)
