include(sphexa_add_test)

set(testname octree_perf)
add_executable(${testname} octree.cpp)
target_include_directories(${testname} PRIVATE ../../include)
target_include_directories(${testname} PRIVATE ../)
target_link_libraries(${testname} PRIVATE OpenMP::OpenMP_CXX)
sphexa_add_test(${testname} EXECUTABLE ${testname} RANKS 1)
install(TARGETS ${testname} RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR}/performance)

set(testname peers_perf)
add_executable(${testname} peers.cpp)
target_include_directories(${testname} PRIVATE ../../include)
target_include_directories(${testname} PRIVATE ../)
target_link_libraries(${testname} PRIVATE OpenMP::OpenMP_CXX)
sphexa_add_test(${testname} EXECUTABLE ${testname} RANKS 1)
install(TARGETS ${testname} RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR}/performance)

set(testname scan_perf)
add_executable(${testname} scan.cpp)
target_include_directories(${testname} PRIVATE ../../include)
target_include_directories(${testname} PRIVATE ../)
target_link_libraries(${testname} PRIVATE OpenMP::OpenMP_CXX)
sphexa_add_test(${testname} EXECUTABLE ${testname} RANKS 1)
install(TARGETS ${testname} RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR}/performance)

set(testname hilbert_perf)
add_executable(${testname} hilbert.cpp)
target_include_directories(${testname} PRIVATE ../../include)
target_include_directories(${testname} PRIVATE ../)
target_link_libraries(${testname} PRIVATE OpenMP::OpenMP_CXX)
sphexa_add_test(${testname} EXECUTABLE ${testname} RANKS 1)
install(TARGETS ${testname} RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR}/performance)
unset(testname)

if(CMAKE_CUDA_COMPILER)
    set(testname cudaNeighborsTest)
    add_executable(${testname} $<TARGET_OBJECTS:cuda_find_neighbors_obj> neighbor_driver.cu)
    target_include_directories(${testname} PRIVATE ../../include)
    target_include_directories(${testname} PRIVATE ../)
    target_link_libraries(${testname} PRIVATE ${CUDA_RUNTIME_LIBRARY} OpenMP::OpenMP_CXX)
    sphexa_add_test(${testname} EXECUTABLE ${testname} RANKS 1)
    install(TARGETS ${testname} RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR}/performance)

    set(testname octree_perf_gpu)
    add_executable(${testname} octree.cu)
    target_include_directories(${testname} PRIVATE ../../include)
    target_include_directories(${testname} PRIVATE ../)
    sphexa_add_test(${testname} EXECUTABLE ${testname} RANKS 1)
    install(TARGETS ${testname} RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR}/performance)

    set(testname hilbert_perf_gpu)
    add_executable(${testname} hilbert.cu)
    target_include_directories(${testname} PRIVATE ../../include)
    target_include_directories(${testname} PRIVATE ../)
    sphexa_add_test(${testname} EXECUTABLE ${testname} RANKS 1)
    install(TARGETS ${testname} RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR}/performance)
    unset(testname)
endif()
